--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,7 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+*.pkl filter=lfs diff=lfs merge=lfs -text
+*filled_features_c18_allsamples.csv filter=lfs diff=lfs merge=lfs -text
+*xcms_feature_table_long_c18.csv filter=lfs diff=lfs merge=lfs -text
+*pairwise_sample_comparisons/allcomps_pairwise_thru_network.csv filter=lfs diff=lfs merge=lfs -text
+*c18_comp_feat_pcid_mzrt_rtwindow.csv filter=lfs diff=lfs merge=lfs -text
